overflow-x fixed and catering menu order button removed

--- a/website/styles/globals.css
+++ b/website/styles/globals.css
@@ -4,29 +4,29 @@
 
 html,
 body {
-	padding: 0;
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  overflow-x: hidden;
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-	color: inherit;
-	text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 body::-webkit-scrollbar {
-	width: 0.33rem;
-  }
-  
-  body::-webkit-scrollbar-track {
-	background: #1e1e24;
-  }
-  
-  body::-webkit-scrollbar-thumb {
-	background: #D12130;
-  }
-  
+  width: 0.33rem;
+}
+
+body::-webkit-scrollbar-track {
+  background: #1e1e24;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #d12130;
+}
